set the PermGen size needed and move cargo install out of target so it doesn't get re-downloaded Merged from: r916074
git-svn-id: https://svn.apache.org/repos/asf/continuum/trunk@916083 13f79535-47bb-0310-9956-ffa450edef68